--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div id ="main-row" class="row">
-    <nav id="public_navigation" class="navbar navbar-default col-sm-2">
+    <nav id="public_navigation" class="navbar navbar-default col-md-2">
 
         <div class="nav-button row">
             <div class="cat_pol_switcher col-md-12">
@@ -161,7 +161,7 @@
         </div><!--nav_lists_outer row--> 
     </nav>
 
-    <div id="public_info" class="col-sm-10">
+    <div id="public_info" class="col-md-10">
 
         <div class="public_name_id row">
             <div class="col-md-6">
