--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -38,7 +38,7 @@ header {
 }
 
 /*Affects the nav bar list, as well as the pagedList*/
-#category_section ul {
+.nav_lists ul{
     list-style-type: none;
     font-size: 14px;
     padding-left: 0px;
@@ -209,7 +209,7 @@ input:checked + .slider:before {
 
 /*DocType sublist item font adjustments*/
 #docType_list li a{
-    font-size: 80%;
+    font-size: 70%;
     padding-left: 10px;
 }
 
@@ -257,6 +257,10 @@ td {
     background: white;
 }
 
+th a {
+    color: inherit;
+}
+
 /*The nav lists and it's title*/
 .nav_lists{
     padding-left: 0;
@@ -288,7 +292,7 @@ td {
 }
 
 li {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 /*Preview Image sizing*/
@@ -320,7 +324,7 @@ form {
 
 
 .pagedList {
-        margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
 }
 
