--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -8,16 +8,15 @@
     <nav id="public_navigation" class="navbar navbar-default col-md-2">
 
         <div class="nav-button row">
-            <div class="cat_pol_switcher col-md-12">
-                <h2>Category/Policy</h2>
-                <h1>@ViewBag.Example</h1>
-
+            <p class="col-md-4">Category</p>
+            <div class="cat_pol_switcher col-md-4">
                 <!-- Rounded switch -->
                 <label class="switch">
                     <input type="checkbox" id="category_policy_toggle">
                     <div class="slider round"></div>
                 </label>
             </div>
+            <p class="col-md-4">Document Type</p>
         </div>
 
         <div class="nav_lists_outer row">
