--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -8,7 +8,7 @@
     <nav id="public_navigation" class="navbar navbar-default col-md-2">
 
         <div class="nav-button row">
-            <p class="col-md-4">Category</p>
+            <p class="col-md-5">Categories</p>
             <div class="cat_pol_switcher col-md-4">
                 <!-- Rounded switch -->
                 <label class="switch">
@@ -16,7 +16,7 @@
                     <div class="slider round"></div>
                 </label>
             </div>
-            <p class="col-md-4">Document Type</p>
+            <p class="col-md-3">Policies</p>
         </div>
 
         <div class="nav_lists_outer row">
