--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -24,6 +24,7 @@ header {
 }
     .nav-button * {
         font-size: 14px;
+        font-weight: bold;
         padding: 0;
         margin: 0;
     }
