Fixed bug with clearFields-clear button remembering active navbar

--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -60,7 +60,7 @@
                         $form.find("#IssueYearMaxRange option:eq(0)").prop("selected", true);
 
                         //may want to be more specific with check
-                        if ($(this) == "a") {
+                        if ($(this).prop('tagName') == "A") {
                             $(".active").removeClass('active');
                         }
 
