--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -221,11 +221,24 @@ input:checked + .slider:before {
 
 /*Anchors with class 'button' changes (i.e. Clear Button)*/
 a.button {
-     background: url(../Images/clear.png) no-repeat center;
+     /*background: url(../Images/clear.png) no-repeat center;
      display: block;
      background-size: 60px 20px;
      height: inherit;
-     text-indent: -9999px;
+     text-indent: -9999px;*/
+
+    font-weight: 500;
+    font-family: sans-serif;
+    font-size: 17px;
+    text-decoration: none;
+    background-color: #EEEEEE;
+    color: #333333;
+    padding: 2px 6px 2px 6px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+    margin-bottom: 10px;
 }
 
 /*Constant 'public' info display*/
