Originally changed it to have descriotion text shrink to fit static table size, but eventually changed it back (but left remnants if want to continue one day).  should remove the jquery extension.  Also added max-width description width

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -377,3 +377,14 @@ form input {
 @media(min-width:768px){}
 @media(min-width:992px){}
 @media(min-width:1200px){}
+
+/*.description {
+    width: 200px;
+    max-width: 400px;
+    height: 50px;
+    overflow: hidden;
+    white-space: nowrap;
+}*/
+.description {
+    max-width: 300px;
+}
