--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -23,7 +23,7 @@ header {
     height: 5%;
 }
     .nav-button * {
-        font-size: 14px;
+        font-size: 1vw;
         font-weight: bold;
         padding: 0;
         margin: 0;
